table_3/results/Table-wrapper-csv-impl-pre-nullaway-ngt.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableFactory.java:24: error: cannot find symbol
import org.spacious_team.table_wrapper.api.TableColumnDescription;
                                          ^
  symbol:   class TableColumnDescription
  location: package org.spacious_team.table_wrapper.api
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableFactory.java:33: error: cannot find symbol
    public Table create(ReportPage reportPage, String tableName, TableCellRange tableRange, Class<? extends TableColumnDescription> headerDescription, int headersRowCount) {
                                                                                                            ^
  symbol:   class TableColumnDescription
  location: class CsvTableFactory
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTable.java:26: error: cannot find symbol
import org.spacious_team.table_wrapper.api.TableColumnDescription;
                                          ^
  symbol:   class TableColumnDescription
  location: package org.spacious_team.table_wrapper.api
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTable.java:32: error: cannot find symbol
    protected CsvTable(AbstractReportPage<CsvTableRow> reportPage, String tableName, TableCellRange tableRange, Class<? extends TableColumnDescription> headerDescription, int headersRowCount) {
                                                                                                                                ^
  symbol:   class TableColumnDescription
  location: class CsvTable
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvReportPage.java:72: error: cannot find symbol
    public TableCellAddress find(int startRow, int endRow, int startColumn, int endColumn, @Nullable() Predicate<Object> cellValuePredicate) {
                                                                                            ^
  symbol:   class Nullable
  location: class CsvReportPage
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvReportPage.java:77: error: cannot find symbol
    @Nullable()
     ^
  symbol:   class Nullable
  location: class CsvReportPage
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableCell.java:49: error: cannot find symbol
        @Nullable()
         ^
  symbol:   class Nullable
  location: class RowAndIndex
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-ngt-pre/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:33: error: cannot find symbol
    @Nullable
     ^
  symbol:   class Nullable
  location: class CsvCellDataAccessObject
8 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 447ms
8
